@@ -21,12 +21,10 @@ static GtkWidget *Mono;
 static GtkWidget *Sample_48;
 static GtkWidget *Sample_44;
 static GtkWidget *Sample_22;
-static GtkWidget *Sample_11;
 
 static const gint FREQ_SAMPLE_48 = 48000;
 static const gint FREQ_SAMPLE_44 = 44100;
 static const gint FREQ_SAMPLE_22 = 22050;
-static const gint FREQ_SAMPLE_11 = 11025;
 
 void fc_ip_load_config()
 {
@@ -168,13 +166,6 @@ void fc_ip_configure()
 		if (fc_myConfig.frequency == FREQ_SAMPLE_22)
 			gtk_toggle_button_set_active(GTK_TOGGLE_BUTTON(Sample_22), TRUE);
 
-		Sample_11 = gtk_radio_button_new_with_label(sample_group, "11025 Hz");
-		sample_group = gtk_radio_button_group(GTK_RADIO_BUTTON(Sample_11));
-		gtk_object_set_data(GTK_OBJECT(fc_config_window), "Sample_11", Sample_11);
-		gtk_box_pack_start(GTK_BOX(vbox3), Sample_11, TRUE, TRUE, 0);
-		if (fc_myConfig.frequency == FREQ_SAMPLE_11)
-			gtk_toggle_button_set_active(GTK_TOGGLE_BUTTON(Sample_11), TRUE);
-
 		Quality_Label = gtk_label_new("Quality");
 		gtk_object_set_data(GTK_OBJECT(fc_config_window), "Quality_Label", Quality_Label);
 		gtk_notebook_append_page(GTK_NOTEBOOK(notebook1), vbox1, Quality_Label);
@@ -224,8 +215,6 @@ static void config_ok(GtkWidget * widget, gpointer data)
 		fc_myConfig.frequency = FREQ_SAMPLE_44;
 	if (GTK_TOGGLE_BUTTON(Sample_22)->active)
 		fc_myConfig.frequency = FREQ_SAMPLE_22;
-	if (GTK_TOGGLE_BUTTON(Sample_11)->active)
-		fc_myConfig.frequency = FREQ_SAMPLE_11;
 
 	if ((cfg = aud_cfg_db_open()))
     {
